--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,6 @@ include *.md
 include LICENSE
 
 # includes the asterix xml definitions:
-graft asterix4py
+graft asterix4py_skyvision
 
 global-exclude *.py[cod]
